# python-utils

./: .gitignore  README.md  pdm.ps1  pdm.sh  pkm.sh  poetry.ps1  poetry.py  pyenv.sh  pyproject.toml  setup.py  setup.sh  techstack.md  techstack.yml  venv.sh
.github/workflows/: compatible.yml  libs.yml  poetry.yml  publish.yml  python-app.yml  tests.yml
davidkhala/http_request/: __init__.py
davidkhala/poetry/: __init__.py  cli.py
davidkhala/sql/: __init__.py
davidkhala/syntax/: __init__.py  env.py  format.py  fs.py  interface.py  js.py  log.py  path.py  poetry.py
davidkhala/utils/: geo.py  protocol.py  typed.py
davidkhala/utils/fastapi/: request.py
davidkhala/utils/http_request/: __init__.py  on_response.py  protocol.py  proxy.py  stream.py
davidkhala/utils/poetry/: __init__.py  cli.py
davidkhala/utils/syntax/: __init__.py  compat.py  env.py  format.py  fs.py  interface.py  log.py  network.py  path.py  time.py  typing.py  url.py
env/: README.md  venv.sh
http/: requirements.txt
httpRequest/: __init__.py
httpRequest/test/: unit.py
http_request/: .pdm.toml  README.md  __init__.py  pyproject.toml
http_request/test/: unit.py
poetry/: README.md  admin.ps1  admin.sh  admin.zsh  poetry.ps1  poetry.sh  pyproject.toml.md
syntax/: __init__.py  format.py  fs.py  js.py  path.py
syntax/test/: package.py
test/: .env  env_test.py  http_request_test.py  sql_test.py  syntax_test.py
tests/: env_test.py  geo.py  github_test.py  http_request_test.py  sql_test.py  syntax_test.py  template_test.py
tests/data/: test.sql
tests/http/: http_request_test.py
tests/poetry/: test.ps1  test_.py
uv/: README.md  admin.ps1
