[tool.poetry]
name = "davidkhala.utils"
version = "0.0.0"
description = "@davidkhala/python-utils"
authors = ["David Liu <david-khala@hotmail.com>"]
readme = "README.md"
packages = [{ include = "http_request" }, { include = "syntax" }]

[tool.poetry.dependencies]
python = "^3.13"
requests = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest="*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
