[tool.poetry]
name = "davidkhala.utils"
version = "0.2.1"
description = "@davidkhala/python-utils"
authors = ["David Liu <david-khala@hotmail.com>"]
readme = "README.md"
packages = [{ include = "davidkhala" }]

[tool.poetry.scripts]
test = "pytest:main"

[tool.poetry.dependencies]
python = "^3.9"
# for extras
requests = { version = "*", optional = true }
sqlparse = { version = "*", optional = true }
python-dotenv = { version = "*", optional = true }
[tool.poetry.group.dev.dependencies]
pytest = "*"
python-dotenv = "*"

[tool.poetry.extras]
sql = ["sqlparse"]
http_request = ["requests"]
poetry = ["python-dotenv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
