[project]
name = "davidkhala.utils"
version = "0.8.3"
description = "@davidkhala/python-utils"
authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
sql = ["sqlparse"]
geo = ['numpy']
http_request = ["requests"]
poetry = ["python-dotenv"]
build = ["pyinstaller ; python_version < '3.14'"]
api = ["fastapi"]
[project.scripts]
build-poetry = "poetry:build"
clean-poetry = "poetry:clean"

[dependency-groups]
dev = [
    "pytest", "pydantic"
]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
