[project]
name = "http_request"
version = "0.0.0"
description = ""
authors = [
    {name = "David Liu", email = "david-khala@hotmail.com"},
]
dependencies = [
    "requests>=2.28.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
